--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,6 +1,9 @@
 .container {
   min-height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ecf0f3;
 }
 
 .sideMenuSpace {
