--- a/src/components/side_menu/side_menu.module.css
+++ b/src/components/side_menu/side_menu.module.css
@@ -65,7 +65,7 @@
   left: 0px;
   width: 50px;
   height: 100%;
-  background-color: #7ac3cc;
+  background-color: #4b70e2;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 2px 2px;
   transition: width 0.2s;
   color: white;
