--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ code {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
   -webkit-user-drag: none;
 }
 ul {
