--- a/src/pages/menu1/menu1.module.css
+++ b/src/pages/menu1/menu1.module.css
@@ -2,3 +2,11 @@
   width: 100%;
   background-color: #f4f5f7;
 }
+
+.table {
+  text-align: center;
+}
+
+.table > * > * > * {
+  padding: 0 5px;
+}
