--- a/src/components/side_menu/side_menu.module.css
+++ b/src/components/side_menu/side_menu.module.css
@@ -1,3 +1,5 @@
+@value fo-1, fo-2, primary from '../../common/colors.css';
+
 /* 햄버거 버튼 */
 .toggleIcon {
   display: inline-block;
@@ -64,7 +66,8 @@
   left: 0;
   width: 50px;
   height: 100%;
-  background-image: linear-gradient(to right, #ac99f2, #a7baf2);
+  background-image: linear-gradient(to right, fo-1, fo-2);
+  /* background-color: primary; */
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
   transition: width 0.3s;
   color: white;
