--- a/src/pages/user/user.module.css
+++ b/src/pages/user/user.module.css
@@ -1,11 +1,11 @@
 .container {
   width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.table {
-  text-align: center;
-}
-
-.table > * > * > * {
-  padding: 0 5px;
+.main {
+  padding: 20px;
+  flex: 1 1 auto;
 }
