--- a/src/components/side_menu/side_menu.module.css
+++ b/src/components/side_menu/side_menu.module.css
@@ -1,4 +1,4 @@
-@value fo-1, fo-2, primary from '../../common/colors.css';
+@value fo-1, fo-2 from '../../common/colors.css';
 
 /* 햄버거 버튼 */
 .toggleIcon {
@@ -67,7 +67,6 @@
   width: 50px;
   height: 100%;
   background-image: linear-gradient(to right, fo-1, fo-2);
-  /* background-color: primary; */
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
   transition: width 0.3s;
   color: white;
