--- a/src/components/user_list/user_list.module.css
+++ b/src/components/user_list/user_list.module.css
@@ -1,32 +1,35 @@
 @value gray-200, gray-500, gray-600, dark from '../../common/colors.css';
 
 .table {
-  display: inline-block;
   font-family: 'Roboto', sans-serif;
   color: gray-600;
-  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .tableHeader {
   font-size: 14px;
   border-bottom: 1px solid gray-500;
   font-weight: 700;
-  display: flex;
-  justify-content: space-evenly;
   padding: 5px;
 }
 
 .tableHeader,
-.items {
-  width: 300px;
+.items,
+.addBtn,
+.addForm {
+  height: 35px;
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr 2.5fr 2.5fr 1fr 1fr;
+  grid-auto-flow: column;
+  grid-template-columns: 50px 50px 1fr 1fr 1.5fr 1.5fr 50px 50px;
   padding: 0 10px;
   cursor: default;
 }
 
-.items:hover {
+.items:hover,
+.items.selected {
   background-color: gray-200;
 }
 
@@ -34,6 +37,7 @@
   display: block;
   padding: 8px;
   text-align: center;
+  white-space: nowrap;
 }
 
 .check {
@@ -43,8 +47,33 @@
 }
 
 .icon {
-  display: flex;
-  align-items: center;
+  line-height: 0;
   transform: scale(1.2);
   cursor: pointer;
+}
+
+.addBtn {
+  border-top: 1px solid gray-500;
+  border-bottom: 1px solid gray-500;
+  padding: 0 10px;
+  cursor: pointer;
+  place-items: stretch;
+}
+
+.addBtn > span {
+  grid-column: 1 / -1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.addForm {
+  border-top: 1px solid gray-500;
+  border-bottom: 1px solid gray-500;
+}
+
+.empty {
+  display: flex;
+  justify-content: center;
+  padding: 6rem;
 }
