--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,19 @@ select,
 textarea {
   outline: 0;
 }
+
+/* scrollbar */
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #dee1e2;
+  border-radius: 5px;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #bbbfc2;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
